# EmbedNewConcept-20260305

./: .gitignore  README.md  main.py  pyproject.toml
config/: all_concepts.json  concepts_10.json  fix_categories.json  target_concepts.json  target_concepts_long.json  target_concepts_mini_10.json  target_concepts_mini_11.json  target_concepts_mini_12.json  target_concepts_mini_13.json  target_concepts_mini_2.json  target_concepts_mini_3.json  target_concepts_mini_4.json  target_concepts_mini_5.json  target_concepts_mini_6.json  target_concepts_mini_7.json  target_concepts_mini_8.json  target_concepts_mini_9.json
data/: propnouns_summary_outofrange_30_300.txt
docs/: data_pipeline.md  mermaid_figure.md
notebook20260305/: analyze_cossim_in_cats.ipynb  calc_cossim_in_categories.ipynb  dbpedia_data_info.ipynb  extract_main_text_from_wiki.ipynb  gen_features_from_wiki.ipynb  temp_make_train_data.ipynb  tmp.ipynb  visualize_result0314.ipynb  visualize_result0315.ipynb  visualize_result0316.ipynb  visualize_result0317.ipynb  visualize_result0318.ipynb  visualize_result0319.ipynb  visualize_result0320.ipynb  visualize_result0321.ipynb  visualize_result0322.ipynb  visualize_result0323.ipynb  visualize_result0405.ipynb  visualize_result0406.ipynb  visualize_result0410.ipynb  visualize_result0412.ipynb  visualize_result0413.ipynb  visualize_result0414.ipynb  visualize_result0415.ipynb  visualize_result0416.ipynb  visualize_result0417.ipynb  visualize_result0418.ipynb  visualize_result0419.ipynb  visualize_result0420.ipynb  visualize_result0423.ipynb  visualize_result0427.ipynb  (+1 more)
(+96015 files in other folders)
