[project]
name = "embednewconcept-20260305"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "adjusttext>=1.3.0",
    "dataset>=1.6.2",
    "dotenv>=0.9.9",
    "google-genai>=1.66.0",
    "ipykernel>=7.2.0",
    "japanize-matplotlib>=1.1.3",
    "jupyterlab>=4.5.5",
    "language-tool-python>=3.2.2",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "plotnine>=0.15.3",
    "python-dotenv>=1.2.2",
    "pytorch-triton>=0.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "sentencepiece>=0.2.1",
    "sparqlwrapper>=2.0.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "wandb>=0.25.0",
    "wikipedia-api>=0.10.0",
    "wikipedia2vec>=2.0.0",
]
